--- a/Language/Functions/Analog IO/analogRead.adoc
+++ b/Language/Functions/Analog IO/analogRead.adoc
@@ -3,42 +3,38 @@ title: analogRead()
 categories: [ "Functions" ]
 subCategories: [ "Analog I/O" ]
 ---
+// ARDUINO LANGUAGE REFERENCE TAG (above)   ►►►►► ALWAYS INCLUDE IN YOUR FILE ◄◄◄◄◄
 
-
-
-
+// PAGE TITLE
 = analogRead()
-
 
 // OVERVIEW SECTION STARTS
 [#overview]
 --
 
 [float]
-=== Description
-Reads the value from the specified analog pin. The Arduino board contains a 6 channel (8 channels on the Mini and Nano, 16 on the Mega), 10-bit analog to digital converter. This means that it will map input voltages between 0 and 5 volts into integer values between 0 and 1023. This yields a resolution between readings of: 5 volts / 1024 units or, .0049 volts (4.9 mV) per unit. The input range and resolution can be changed using link:../analogreference[analogReference()]`.
+=== Descripción
+Lee el valor del pin analógico especificado. La placa Arduino contiene un convertidor analógico a digital de 6 canales (8 canales en Arduino Mini y Nano, 16 canales en Arduino Mega). Esto significa que mapeará voltajes de entrada entre `0` y `5` voltios en valores enteros entre `0` y `1023`. Esto produce una resolución entre las lecturas de: `5 voltios / 1024 unidades` o, 0.0049 voltios (4.9 mV) por unidad. El rango de entrada y la resolución se pueden cambiar usando link:../analogreference[`analogReference()`].
 
-It takes about 100 microseconds (0.0001 s) to read an analog input, so the maximum reading rate is about 10,000 times a second.
-[%hardbreaks]
+Se necesitan aproximadamente 100 microsegundos (0,0001 s) para leer una entrada analógica, por lo que la velocidad máxima de lectura es aproximadamente 10.000 veces por segundo.
 
 
 [float]
-=== Syntax
-
+=== Sintaxis
 `analogRead(pin)`
 
-[float]
-=== Parameters
-`pin`: the number of the analog input pin to read from (0 to 5 on most boards, 0 to 7 on the Mini and Nano, 0 to 15 on the Mega)
 
 [float]
-=== Returns
-int(0 to 1023)
+=== Parámetros
+`pin`: Pin de entrada analógica a leer (`0` a `5` en la mayoría de las placas, `0` a `7` en Arduino Mini y Nano, `0` a `15` en Arduino Mega) - `(int)`
+
+
+[float]
+=== Retorno
+`int(0 a 1023)`
 
 --
 // OVERVIEW SECTION ENDS
-
-
 
 
 // HOW TO USE SECTION STARTS
@@ -46,10 +42,12 @@ int(0 to 1023)
 --
 
 [float]
-=== Example Code
+=== Código de ejemplo
 // Describe what the example code is all about and add relevant code   ►►►►► THIS SECTION IS MANDATORY ◄◄◄◄◄
-The code reads the voltage on analogPin and displays it.
+El código lee el voltaje en `analogPin` y lo muestra.
 
+[%hardbreaks]
+// CODE
 [source,arduino]
 ----
 int analogPin = 3;     // potentiometer wiper (middle terminal) connected to analog pin 3
@@ -69,9 +67,10 @@ void loop()
 ----
 [%hardbreaks]
 
+
 [float]
-=== Notes and Warnings
-If the analog input pin is not connected to anything, the value returned by analogRead() will fluctuate based on a number of factors (e.g. the values of the other analog inputs, how close your hand is to the board, etc.).
+=== Notas y advertencias
+Si el pin de entrada analógica no está conectado a nada, el valor devuelto por `analogRead()` fluctuará en función de una serie de factores (por ejemplo, los valores de las otras entradas analógicas, qué tan cerca está su mano de la placa, etc.).
 
 --
 // HOW TO USE SECTION ENDS
@@ -82,10 +81,11 @@ If the analog input pin is not connected to anything, the value returned by anal
 --
 
 [float]
-=== See also
+=== Ver también
 
 [role="language"]
-* #LANGUAGE# link:../../zero-due-mkr-family/analogreadresolution[analogReadResolution()]
-* #LANGUAGE# https://www.arduino.cc/en/Tutorial/AnalogInputPins[Tutorial: Analog Input Pins]
+* #Lenguaje# link:../../zero-due-mkr-family/analogreadresolution[analogReadResolution()]
+* #Lenguaje# https://www.arduino.cc/en/Tutorial/AnalogInputPins[Tutorial: Analog Input Pins]
+
 --
 // SEE ALSO SECTION ENDS
