Resaltado de palabras clave
se resaltan palabras clave en el texto de descripción

--- a/Language/Functions/Analog IO/analogReference.adoc
+++ b/Language/Functions/Analog IO/analogReference.adoc
@@ -16,11 +16,11 @@ subCategories: [ "Analog I/O" ]
 === Descripción
 Configura el voltaje de referencia utilizado para la entrada analógica (es decir, el valor utilizado como la parte superior del rango de entrada). Las opciones son:
 
-* DEFAULT: La referencia analógica predeterminada de `5` voltios (en placas Arduino de 5V) o `3.3` voltios (en placas Arduino de 3.3V). +
-* INTERNAL: Una referencia incorporada, igual a `1.1` voltios en el ATmega168 o ATmega328P y `2.56` voltios en el ATmega8 (no disponible en el Arduino Mega). +
-* INTERNAL1V1: Una referencia incorporada de `1.1` voltios (solo Arduino Mega). +
-* INTERNAL2V56: Una referencia incorporada de `2.56` voltios (solo Arduino Mega). +
-* EXTERNAL: La tensión aplicada al pin `AREF` (de `0` a `5` voltios solamente) se utiliza como referencia. +
+* *DEFAULT*: La referencia analógica predeterminada de `5` voltios (en placas Arduino de 5V) o `3.3` voltios (en placas Arduino de 3.3V). +
+* *INTERNAL*: Una referencia incorporada, igual a `1.1` voltios en el ATmega168 o ATmega328P y `2.56` voltios en el ATmega8 (no disponible en el Arduino Mega). +
+* *INTERNAL1V1*: Una referencia incorporada de `1.1` voltios (solo Arduino Mega). +
+* *INTERNAL2V56*: Una referencia incorporada de `2.56` voltios (solo Arduino Mega). +
+* *EXTERNAL*: La tensión aplicada al pin `AREF` (de `0` a `5` voltios solamente) se utiliza como referencia. +
 
 
 [float]
@@ -49,7 +49,7 @@ Nada
 === Notas y advertencias
 Después de cambiar la referencia analógica, las primeras lecturas de `analogRead()` pueden no ser precisas.
 
-*¡No utilice nada inferior a 0 V o más de 5 V para la tensión de referencia externa en el pin AREF! Si está utilizando una referencia externa en el pin AREF, debe establecer la referencia analógica en `EXTERNAL` antes de llamar a `analogRead()`.* De lo contrario, acortará el voltaje de referencia activo (generado internamente) y el pin AREF, posiblemente dañando el microcontrolador en su placa Arduino.
+*¡No utilice nada inferior a `0` voltios o más de `5` voltios para la tensión de referencia externa en el pin AREF! Si está utilizando una referencia externa en el pin AREF, debe establecer la referencia analógica en `EXTERNAL` antes de llamar a `analogRead()`.* De lo contrario, acortará el voltaje de referencia activo (generado internamente) y el pin AREF, posiblemente dañando el microcontrolador en su placa Arduino.
 
 Alternativamente, puede conectar la tensión de referencia externa al pin AREF a través de una resistencia de `5K`, lo que le permite cambiar entre voltajes de referencia externos e internos. Tenga en cuenta que la resistencia alterará el voltaje que se usa como referencia porque hay una resistencia interna de `32K` en el pin AREF. Los dos actúan como un divisor de voltaje, por lo que, por ejemplo, `2.5` voltios aplicados a través de la resistencia producirán `2.5 * 32 / (32 + 5) = (+/-) 2.2 voltios` en el pin AREF.
 
