Resaltado de parametros
Se resalto la sintaxis del tipo de parametro

--- a/Language/Functions/Analog IO/analogReference.adoc
+++ b/Language/Functions/Analog IO/analogReference.adoc
@@ -30,7 +30,7 @@ Configura el voltaje de referencia utilizado para la entrada analógica (es deci
 
 [float]
 === Parámetros
-`type`: Qué tipo de referencia utilizar (DEFAULT, INTERNAL, INTERNAL1V1, INTERNAL2V56, EXTERNAL).
+`type`: Qué tipo de referencia utilizar `(DEFAULT, INTERNAL, INTERNAL1V1, INTERNAL2V56, EXTERNAL)`
 
 
 [float]
