--- a/Language/Functions/Bits and Bytes/bitSet.adoc
+++ b/Language/Functions/Bits and Bytes/bitSet.adoc
@@ -25,14 +25,14 @@ Establece (escribe un 1) un bit de una variable numérica.
 
 
 [float]
-=== Parameters
-`x`: the numeric variable whose bit to set
+=== Parámetros
+`x`: Variable numérica cuyo bit sera establecido.
 
-`n`: which bit to set, starting at 0 for the least-significant (rightmost) bit
+`n`: bit que se establecera, comenzando en 0 para el bit menos significativo (más a la derecha)
 
 [float]
-=== Returns
-Nothing
+=== Retorna
+Nada
 
 --
 // OVERVIEW SECTION ENDS
