--- a/Language/Functions/Bits and Bytes/bitWrite.adoc
+++ b/Language/Functions/Bits and Bytes/bitWrite.adoc
@@ -25,15 +25,15 @@ Escribe un bit de una variable numérica.
 
 [float]
 === Parámetros
-`x`: Variable numérica a la cual escribir
+`x`: Variable numérica a la cual escribir.
 
-`n`: número del bit a escribir, comenzando en 0 para el bit menos significativo (más a la derecha)
+`n`: número del bit a escribir, comenzando en 0 para el bit menos significativo (más a la derecha).
 
-`b`: Valor a escribir en el bit (0 o 1)
+`b`: Valor a escribir en el bit (0 o 1).
 
 [float]
 === Retorna
-Nada
+Nada.
 
 --
 // OVERVIEW SECTION ENDS
