--- a/Language/Functions/Bits and Bytes/bit.adoc
+++ b/Language/Functions/Bits and Bytes/bit.adoc
@@ -15,7 +15,7 @@ subCategories: [ "Bits and Bytes" ]
 
 [float]
 === Descripción
-Calcula el valor del bit especificado (el bit 0 es 1, el bit 1 es 2, el bit 2 es 4, etc.).
+Calcula el valor del bit especificado (el bit `0` es `1`, el bit `1` es `2`, el bit `2` es `4`, etc.).
 
 
 [float]
