--- a/Language/Functions/Bits and Bytes/bitSet.adoc
+++ b/Language/Functions/Bits and Bytes/bitSet.adoc
@@ -16,7 +16,7 @@ subCategories: [ "Bits and Bytes" ]
 
 [float]
 === Descripción
-Establece (escribe un 1) un bit de una variable numérica.
+Establece (escribe un `1`) un bit de una variable numérica.
 
 
 [float]
@@ -28,7 +28,7 @@ Establece (escribe un 1) un bit de una variable numérica.
 === Parámetros
 `x`: Variable numérica cuyo bit sera establecido.
 
-`n`: bit que se establecera, comenzando en 0 para el bit menos significativo (más a la derecha).
+`n`: bit que se establecera, comenzando en `0` para el bit menos significativo (más a la derecha).
 
 [float]
 === Retorna
