--- a/Language/Functions/Bits and Bytes/bitWrite.adoc
+++ b/Language/Functions/Bits and Bytes/bitWrite.adoc
@@ -27,9 +27,9 @@ Escribe un bit de una variable numérica.
 === Parámetros
 `x`: Variable numérica a la cual escribir.
 
-`n`: número del bit a escribir, comenzando en 0 para el bit menos significativo (más a la derecha).
+`n`: número del bit a escribir, comenzando en `0` para el bit menos significativo (más a la derecha).
 
-`b`: Valor a escribir en el bit (0 o 1).
+`b`: Valor a escribir en el bit (`0` o `1`).
 
 [float]
 === Retorna
